@@ -28,25 +28,22 @@ class SlickFormatter extends BlazyFormatterManager implements SlickFormatterInte
 
     parent::buildSettings($build, $items);
 
-    $optionset_name             = $settings['optionset'] ?: 'default';
-    $build['optionset']         = Slick::load($optionset_name);
-    $settings['nav']            = !empty($settings['optionset_thumbnail']) && isset($items[1]);
+    $optionset_name     = $settings['optionset'] ?: 'default';
+    $build['optionset'] = Slick::load($optionset_name);
+    $settings['nav']    = !empty($settings['optionset_thumbnail']) && isset($items[1]);
 
     // Do not bother for SlickTextFormatter, or when vanilla is on.
     // @todo simplify this.
     if (empty($settings['vanilla'])) {
-      $resimage               = !empty($settings['responsive_image_style']);
-      $lazy                   = $build['optionset']->getSetting('lazyLoad');
-      $lazy                   = ($this->configLoad('responsive_image') && $resimage) ? 'blazy' : $lazy;
-      $blazy                  = $lazy == 'blazy' || !empty($settings['blazy']);
-      $settings['lazy']       = (!$blazy && $items->count() == 1) ? '' : $lazy;
-      $settings['blazy']      = $blazy;
-      $settings['lazy_class'] = $settings['lazy_attribute'] = 'lazy';
+      $resimage          = !empty($settings['responsive_image_style']);
+      $lazy              = $build['optionset']->getSetting('lazyLoad');
+      $lazy              = ($this->configLoad('responsive_image') && $resimage) ? 'blazy' : $lazy;
+      $blazy             = $lazy == 'blazy' || !empty($settings['blazy']);
+      $settings['lazy']  = (!$blazy && $items->count() == 1) ? '' : $lazy;
+      $settings['blazy'] = $blazy;
 
-      if ($settings['blazy']) {
-        $settings['lazy']           = 'blazy';
-        $settings['lazy_attribute'] = 'src';
-        $settings['lazy_class']     = 'b-lazy';
+      if (!$settings['blazy']) {
+        $settings['lazy_class'] = $settings['lazy_attribute'] = 'lazy';
       }
     }
   }
